--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin-top: 20px;
+  background: #ddd;
+}
+
+#resume-header {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#profile-picture {
+  width: 100%;
+}
+
+#resume-footer {
+  padding: 20px;
+  text-align: center;
+}
+
+.card {
+  position: relative;
+  display: -webkit-flex;
+  display: flex;
+  padding: 25px;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.7rem;
+  margin-bottom: 20px;
+}
+
+.position {
+  margin-bottom: 12px;
+}
+
+p {
+  text-align: justify;
+}
+
+h3 {
+  padding: 12px 12px 12px 0;
+}
