--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,13 @@
         <h1>Cristian Quinto</h1>
         <h2>Jr. Web Developer</h2>
         <ul>
+          <li>Age: 27</li>
           <li>Mail: ezequielqmacias@gmail.com</li>
           <li>Phone: +54 9 264 626-9903</li>
           <li>
             Social:
-            <a target="_blank" href="https://linktr.ee/cqubeargentina"
-              >linktr.ee/cqubeargentina</a
+            <a target="_blank" href="https://uadd.me/cqube"
+              >https://uadd.me/cqube</a
             >
           </li>
         </ul>
@@ -53,6 +54,9 @@
         <h3>Work Experience</h3>
         <div class="card position">
           <h5>Java Developer</h5>
+          <h6 class="text-muted">
+            <span>July 2021</span> - <span>December 2021</span>
+          </h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
             sapiente sed pariatur sint exercitationem eos expedita eveniet
@@ -65,15 +69,18 @@
               Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 10% consectetuer adipiscing elit.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 10% consectetuer adipiscing elit.
             </li>
           </ul>
         </div>
         <div class="card position">
           <h5>PHP Developer</h5>
+          <h6 class="text-muted">
+            <span>January 2022</span> - <span>March 2022</span>
+          </h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
             sapiente sed pariatur sint exercitationem eos expedita eveniet
@@ -83,18 +90,21 @@
           <strong>Achievements:</strong>
           <ul>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 50% consectetuer adipiscing elit.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 25% consectetuer adipiscing elit.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 25% consectetuer adipiscing elit.
             </li>
           </ul>
         </div>
         <div class="card position">
           <h5>.NET Developer</h5>
+          <h6 class="text-muted">
+            <span>March 2022</span> - <span>Present</span>
+          </h6>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
             sapiente sed pariatur sint exercitationem eos expedita eveniet
@@ -104,13 +114,13 @@
           <strong>Achievements:</strong>
           <ul>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 20% consectetuer adipiscing elit.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 40% consectetuer adipiscing elit.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, 80% consectetuer adipiscing elit.
+              Lorem ipsum dolor sit amet, 40% consectetuer adipiscing elit.
             </li>
           </ul>
         </div>
@@ -118,12 +128,15 @@
       <div>
         <h3>Projects</h3>
         <div class="card position">
-          <h5>Project X</h5>
+          <h5>AGME</h5>
+          <h6 class="text-muted">
+            <span>September 2021</span>
+          </h6>
           <div class="row">
             <div class="col-3">
               <img
                 id="profile-picture"
-                src="https://ui-avatars.com/api/?name=Project+X&size=255"
+                src="https://ui-avatars.com/api/?name=A+G&size=255"
                 alt=""
               />
             </div>
@@ -143,12 +156,15 @@
           </div>
         </div>
         <div class="card position">
-          <h5>Project Y</h5>
+          <h5>INTI</h5>
+          <h6 class="text-muted">
+            <span>January 2023</span>
+          </h6>
           <div class="row">
             <div class="col-3">
               <img
                 id="profile-picture"
-                src="https://ui-avatars.com/api/?name=Project+Y&size=255"
+                src="https://ui-avatars.com/api/?name=I+N&size=255"
                 alt=""
               />
             </div>
@@ -161,7 +177,7 @@
               </p>
               <strong>Technologies:</strong>
               <span class="badge badge-secondary mx-1">JAVA</span>
-              <span class="badge badge-secondary mr-1">SPRING</span>
+              <span class="badge badge-secondary mr-1">SPRING BOOT</span>
               <span class="badge badge-secondary">ANGULAR</span>
             </div>
           </div>
@@ -174,7 +190,7 @@
         <h5>Backend</h5>
         <ul>
           <li>Java</li>
-          <li>C#</li>
+          <li>TS</li>
           <li>PHP</li>
         </ul>
         <h5>Frontend</h5>
@@ -185,8 +201,8 @@
         </ul>
         <h5>Frameworks</h5>
         <ul>
-          <li>ASP.NET</li>
-          <li>Laravel</li>
+          <li>.NET</li>
+          <li>Node.js</li>
           <li>Bootstrap</li>
         </ul>
       </div>
