--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
         >
           <h5>
             {{ item.category }}
-            <span class="text-muted">({{ item.schedule }})</span>
+            <span class="text-muted">({{ item.schedule }} horas)</span>
           </h5>
           <p>
             <i [style.color]="'grey'">Modalidad:</i> {{ item.modality }}
